# Paper-Reader

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  setup.cfg
backend/src/: config.py  main.py  models.py
backend/src/routers/: annotations.py  papers.py
backend/src/services/: ai_service.py  file_manager.py  mineru_service.py  pdf_processor.py
docs/Claude logs/: claude-conversation-2026-02-22-15eb2567.md
docs/plans/: 2026-02-22-paper-reader-design.md  2026-02-22-paper-reader-implementation-plan.md  2026-02-25-mineru-translation-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: paperApi.ts
frontend/src/components/: AIChat.tsx  ImportDialog.tsx  MarkdownView.tsx  PdfViewer.tsx  TranslationPanel.tsx
frontend/src/pages/: Library.tsx  PaperView.tsx
